# functionProgramming

./: .gitignore
assignment5/: Readme.md  dune
assignment5/src/: dune  finite_group.ml  finite_group.mli
assignment5/test/: dune  tests.ml
assignment6/: Readme.md  dune
assignment6/src-test/: dune  ngrams_tests.ml  tests.ml
assignment6/src/lib/: distribution.ml  distribution.mli  dune  ngram.ml  ngram.mli  utils.ml  utils.mli
assignment6/test/: ddse.txt
assignment7/: Readme.md  discussion.txt  dune
assignment7 2/: dune
assignment7 2/src/: dune  fpse_monad.mli  main.ml  stack_monad.mli  state_monad.mli
assignment7/src/: dune  fpse_monad.ml  fpse_monad.mli  main.ml  stack_monad.ml  stack_monad.mli  state_monad.ml  state_monad.mli
assignment7/test/: dune  tests.ml
