(rule
  (target assignment6.zip)
  (deps 
    src/bin/ngrams.ml
    src/bin/dune
    src/lib/dune
    src/lib/utils.ml
    src/lib/utils.mli
    src/lib/ngram.ml
    src/lib/ngram.mli
    src/lib/distribution.ml
    src/lib/distribution.mli
    src-test/dune
    src-test/ngrams_tests.ml
    src-test/tests.ml
    (glob_files_rec test/**)
  )
  (action
    (run zip -R assignment6.zip %{deps})))